fix misaligned hide btn in pin

--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,7 @@ html, body {
   padding-left: 5%;
   padding-right: 5%;
   border-radius: 10px;
+  margin-top: 12px;
   font-size: 18px;
   font-family: Palatino, URW Palladio L, serif;
   background-color: var(--oscar-gold);
